--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -90,7 +90,7 @@
       </widget>
      </item>
      <item row="3" column="0">
-      <widget class="QLabel" name="labelEnergy">
+      <widget class="QLabel" name="labelDegree">
        <property name="text">
         <string>TextLabel</string>
        </property>
