wait for debug the implicitly deleted move constructor

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,141 +6,52 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>778</width>
-    <height>536</height>
+    <width>449</width>
+    <height>312</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QGroupBox" name="groupBox">
+   <widget class="QFrame" name="frame">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>30</y>
-      <width>221</width>
-      <height>198</height>
+      <y>20</y>
+      <width>431</width>
+      <height>241</height>
      </rect>
     </property>
-    <property name="title">
-     <string>301</string>
+    <property name="frameShape">
+     <enum>QFrame::StyledPanel</enum>
     </property>
-    <layout class="QGridLayout" name="gridLayout">
-     <item row="0" column="0" colspan="2">
-      <widget class="QLineEdit" name="lineEditTemperature">
-       <property name="text">
-        <string>温度</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="2">
-      <widget class="QSpinBox" name="spinBoxTemperature"/>
-     </item>
-     <item row="1" column="0" colspan="2">
-      <widget class="QLineEdit" name="lineEditBlowSpeed">
-       <property name="text">
-        <string>风速</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="2" colspan="2">
-      <widget class="QComboBox" name="comboBoxBlowSpeed">
-       <item>
-        <property name="text">
-         <string>低速</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>中速</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>高速</string>
-        </property>
-       </item>
-      </widget>
-     </item>
-     <item row="2" column="0" colspan="2">
-      <widget class="QLineEdit" name="lineEditModel">
-       <property name="text">
-        <string>模式</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="2" colspan="2">
-      <widget class="QComboBox" name="comboBoxModel">
-       <item>
-        <property name="text">
-         <string>制冷</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>制热</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>睡眠</string>
-        </property>
-       </item>
-      </widget>
-     </item>
-     <item row="3" column="0">
-      <widget class="QLabel" name="labelDegree">
-       <property name="text">
-        <string>TextLabel</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="1">
-      <widget class="QLabel" name="labelUnit2">
-       <property name="text">
-        <string>度</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="2">
-      <widget class="QLabel" name="labelCost">
-       <property name="text">
-        <string>TextLabel</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="3">
-      <widget class="QLabel" name="labelUnit">
-       <property name="text">
-        <string>元</string>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="0">
-      <widget class="QPushButton" name="pushButtonStart">
-       <property name="text">
-        <string>开启</string>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="2" colspan="2">
-      <layout class="QHBoxLayout" name="horizontalLayout"/>
-     </item>
-    </layout>
-   </widget>
-   <widget class="QLabel" name="labelTimeDate">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>10</y>
-      <width>291</width>
-      <height>16</height>
-     </rect>
+    <property name="frameShadow">
+     <enum>QFrame::Raised</enum>
     </property>
-    <property name="text">
-     <string/>
-    </property>
+    <widget class="QTableView" name="tableView">
+     <property name="geometry">
+      <rect>
+       <x>5</x>
+       <y>20</y>
+       <width>421</width>
+       <height>211</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QLabel" name="labelTimeDate">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>0</y>
+       <width>291</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>时间</string>
+     </property>
+    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
@@ -148,10 +59,16 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>778</width>
+     <width>449</width>
      <height>22</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuUser">
+    <property name="title">
+     <string>User</string>
+    </property>
+   </widget>
+   <addaction name="menuUser"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
